<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jive SDK Example</string>
    <string name="action_logout">Logout</string>
    <string name="github_authentication">Github Authentication</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="two_factor_required">Two factor authentication is required.</string>
    <string name="bad_username_password">Bad username or password.</string>
    <string name="one_time">One time</string>
    <string name="oauth_failure">Failed to obtain Oauth token</string>
    <string name="github_token_key">github_token</string>
    <string name="jive_token_key">jive_token</string>
    <string name="jive_endpoint_key">jive_endpoint</string>
    <string name="jive_token_entity_key">jive_token_entity</string>
    <string name="repositories">My Repositories</string>
    <string name="teams">Teams</string>
    <string name="collaborators">Collaborators</string>
    <string name="jive_authentication">Jive Authentication</string>
    <string name="endpoint">Endpoint</string>
    <string name="endpoint_failure">Please use a valid endpoint</string>
    <string name="jive_avatar">Jive Avatar</string>
    <string name="github_avatar">Github Avatar</string>
    <string name="collaborator_deleted">Collaborator deleted</string>
    <string name="collaborator_deleted_failure">Error: collaborator not deleted</string>
    <string name="add_collaborator">Add collaborator</string>
    <string name="follower_search_error">Error searching for followers</string>
    <string name="follower_add_error">Error adding collaborator</string>
    <string name="follower_add_success">Collaborator added</string>
    <string name="team_collaborators_failure">Error obtaining collaborators</string>
    <string name="team_members">Team members</string>
    <string name="error_delete_user_team">Error removing user from team</string>
    <string name="delete_user_team_success">User removed from team</string>
    <string name="follower_invite_success">The collaborator has been invited</string>
</resources>